# s6ui

./: .gitignore  CLAUDE.md  Makefile  README.md  aws_signer.cpp  backend.h  browser_model.cpp  browser_model.h  browser_ui.cpp  browser_ui.h  events.h  main.mm  s3_backend.cpp  s3_backend.h  s3_client.cpp  s3_client.h
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
experiments/: fastlist.py  regularlisttest.py
libs/: README.md
libs/imgui/: README.md
libs/imguicolortextedit/: README.md  TextEditor.h
libs/loguru/: README.md
libs/zstd/: zstd_errors.h
resources/: Info.plist  embedded_font.h
rust/: Cargo.toml
rust/src/: backend.rs  browser_model.rs  browser_ui.rs  events.rs  lib.rs  main.rs  model.rs  preview.rs  s3_backend.rs  settings.rs  streaming_preview.rs  text_viewer.rs  ui.rs
rust/src/aws/: credentials.rs  mod.rs  s3_backend.rs  signer.rs  xml.rs
rust/src/preview/: image_preview.rs  jsonl_preview.rs  mod.rs  renderer.rs  text_preview.rs
scripts/: tag-release.sh
src/: backend.h  browser_model.cpp  browser_model.h  browser_tui.cpp  browser_tui.h  browser_ui.cpp  browser_ui.h  events.h  gzip_decompressor.cpp  gzip_decompressor.h  main.mm  main_linux.cpp  preview_manager.cpp  preview_manager.h  settings.cpp  settings.h  streaming_file.cpp  streaming_file.h  streaming_preview.cpp  streaming_preview.h  tui_jsonl_preview.cpp  tui_jsonl_preview.h  tui_preview_renderer.h  tui_text_preview.cpp  tui_text_preview.h  version.h
src/aws/: aws_credentials.cpp  aws_credentials.h  aws_signer.cpp  aws_signer.h  (+2 more)
tests/: test_viewer_main.mm
(+12 files in other folders)
