[package]
name = "s6ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
# DearImGUI Bindings and Window Management
dear-imgui-rs = "0.8"
dear-imgui-wgpu = "0.8"
dear-imgui-winit = "0.8"
wgpu = "28.0"
winit = "0.30.12"
pollster = "0.4"

# Settings + serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# AWS credentials + signing
ring = "0.17"

# S3 Backend
reqwest = { version = "0.12", features = ["stream", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures-util = "0.3"

# Streaming preview: decompression + memory mapping
flate2 = "1.0"
zstd = "0.13"
memmap2 = "0.9"
